kubernetes/argocd/applications/default/audiobookshelf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: default
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Audiobookshelf
    gethomepage.dev/icon: audiobookshelf.png
    gethomepage.dev/href: https://audiobookshelf.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=audiobookshelf
    gethomepage.dev/widget.type: audiobookshelf
    gethomepage.dev/widget.url: http://audiobookshelf.media.svc.cluster.local
    gethomepage.dev/widget.key: fa55068cef2e4104914cc4b27a03df0d
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - audiobookshelf.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io
        - path:
            type: PathPrefix
            value: /audiobookshelf/socket.io
      backendRefs:
        - name: audiobookshelf
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          port: 80
          weight: 1
